00-vm-setup/03-services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: database
  type: ClusterIP
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: winweb
spec:
  selector:
    app: winweb
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
