00-vm-setup/04-route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: php-webapp
spec:
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: winweb
    weight: 100
  wildcardPolicy: None
